# zfhs-wan-animate

./: .dockerignore  .gitignore  ACCEPTANCE.md  ACCEPTANCE_P3.md  ACCEPTANCE_P4.md  README.md  pyproject.toml  requirements.txt
assets/samples/: README.md
autodl/: nginx-6008.conf
config/: default.yaml  local.yaml.example
docker/: .dockerignore  Dockerfile  docker-compose.yml  entrypoint.sh  healthcheck.sh  requirements-comfy.txt
docker/patches/: onnx_models.py
docs/: ASSETS_MIGRATION.md  AUTODL.md  DOCKER.md  GITHUB_SETUP.md  PROJECT_DEVELOPMENT.md  STANDALONE.md
manifest/: custom_nodes.yaml  model_sources.autodl.yaml  models.yaml  nodes.yaml
notebooks/: README.md  p07_pipeline.ipynb
scripts/: bootstrap.sh  check-service.sh  daemon.sh  download_models.py  download_models.sh  improved-autostart.sh  install_custom_nodes.sh  inventory_assets.py  pack-model-downloader.sh  prepare_docker_build.sh  prepare_docker_volumes.sh  push_to_github.sh  run-warmup.sh  run_p07.py  setup-autodl-autostart.sh  setup_comfy_p07_template.sh  setup_models.sh  start-autodl-services.sh  start-comfyui.sh  start-jupyter.sh  start-nginx-gateway.sh  start-wan-animate.sh  test_audio_mux.py  uninstall-zealman-app.sh  validate_docker_setup.sh  verify_assets.py  warmup_comfy.py
src/zfhs_wan_animate/: __init__.py  audio_mux.py  comfy_client.py  comfy_errors.py  comfy_progress.py  (+3 more)
wan-animate-api/: README.md  app.py  config.py  public_urls.py
wan-animate-web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
workflows/: p07_animate_v4.json  p07_animate_v5.json
(+51 files in other folders)
