[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "zfhs-wan-animate"
version = "0.1.0"
description = "Wan2.2 Animate V4 (P07) workflow runner for ComfyUI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
  "pyyaml>=6.0.1",
]

[project.scripts]
zfhs-run-p07 = "zfhs_wan_animate.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
